<resources>
    <string name="app_name">Github User</string>
    <string name="search_hint">Search Username or Name</string>
    <string name="dummy_name">Name</string>
    <string name="dummy_username">Username</string>
    <string name="github_user_logo">github user logo</string>
    <string name="icon_username">icon username</string>
    <string name="dummy_location">Location</string>
    <string name="dummy_company">Company</string>
    <string name="following">FOLLOWING</string>
    <string name="dummy_following">0</string>
    <string name="followers">FOLLOWERS</string>
    <string name="dummy_followers">0</string>
    <string name="repository">REPOSITORY</string>
    <string name="dummy_repository">0</string>
    <string name="bg_search_text">Your search result will appear here</string>
    <string name="open_with_github_button">Open with github button</string>
    <string name="settings_button">settings button</string>
    <string name="icon_company">icon company</string>
    <string name="icon_location">icon location</string>
    <string name="icon_followers">icon followers</string>
    <string name="icon_following">icon following</string>
    <string name="icon_repository">icon repository</string>
    <string name="background_search">background search</string>
    <string name="home_button">home button</string>
    <string name="text_company">Copyright \u00A9 Ichungelo Inc. - 2021\nAll Right reserved.</string>
    <string name="company_logo">company logo</string>
    <string name="dummy_type">type</string>
    <string name="favorite_button">favorite button</string>
    <string name="settings">Settings</string>
    <string name="localization">Change Language</string>
    <string name="key_localization">Localization</string>
    <string name="key_dark_theme">Apply Dark Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="no_following_found">This user had no following</string>
    <string name="no_followers_found">This user had no followers</string>
    <string name="no_result_found">No result found</string>
    <string name="nav_search">Search</string>
    <string name="nav_favorite">Favorite</string>
    <string name="no_favorite">You don\'t have favorite user</string>
    <string name="background_no_favorite">background no favorite</string>
    <string name="add_favorite">Added user to favorite</string>
    <string name="remove_favorite">Removed user from favorite</string>
    <string name="share_button">Share button</string>
    <string name="your_favorite_users_singular">Your Favorite User.</string>
    <string name="your_favorite_users_plural">Your Favorite Users.</string>
</resources>