<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    tools:context=".activity.SplashActivity">

  <ImageView
      android:id="@+id/img_splash_logo"
      android:layout_width="140dp"
      android:layout_height="140dp"
      android:src="@drawable/ic_brand_github"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.32"
      android:contentDescription="@string/app_name" />

  <TextView
      android:id="@+id/tv_splash_logo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/overlock_sc"
      android:text="@string/app_name"
      android:textColor="@color/white"
      android:textSize="32sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/img_splash_logo" />

  <ProgressBar
      android:id="@+id/progress_circular_splash"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:indeterminateTint="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_splash_logo"
      app:layout_constraintVertical_bias="0.57" />

  <ImageView
      android:id="@+id/img_splash_logo_company"
      android:layout_width="20dp"
      android:layout_height="20dp"
      android:contentDescription="@string/company_logo"
      android:src="@drawable/ic_ichungelo_logo"
      app:layout_constraintBottom_toTopOf="@+id/tv_splash_company"
      app:layout_constraintEnd_toEndOf="@+id/tv_splash_company"
      app:layout_constraintStart_toStartOf="@+id/tv_splash_company"
      tools:ignore="ImageContrastCheck" />

  <TextView
      android:id="@+id/tv_splash_company"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/text_company"
      android:textColor="@color/white"
      android:textSize="12sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/progress_circular_splash"
      app:layout_constraintVertical_bias="0.8"
      tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>